fix: text align tag p

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -7,7 +7,6 @@
     display: flex;
     padding: 56px 0 68px;
     justify-content: space-between;
-    text-align: center;
     h2 {
       margin-bottom: 25px;
     }
@@ -31,15 +30,17 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .jomyers-about {
-    h2 {
-      font-size: 24px;
-    }
-    p {
-      font-size: 16px;
-    }
-    h2, p {
-      margin-bottom: 15px;
+  .jomyers {
+    &-about {
+      h2 {
+        font-size: 24px;
+      }
+      p {
+        font-size: 16px;
+      }
+      h2, p {
+        margin-bottom: 15px;
+      }
     }
   }
 }
@@ -53,6 +54,7 @@
       }
       p {
         font-size: 18px;
+        text-align: center;
       }
       flex-direction: column-reverse;
       align-items: center;
